Added support to specify scheme (http/https)
This allows to run the tests against h2c with upgrade and against h2